@@ -5,6 +5,7 @@ Version 0.3
 ==========
   Peco Danajlovski <vortexmk@gmail.com>
   * Live tweet stream
+  * Fragmented caching 
 
 30.03.2010
 ==========
